added some more changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Paul Jovial | WDD 130</title>
+        <meta name="description" content="Paul Jovial BYU-Idaho WDD 130 course home page.">
+        <meta name="author" content="Paul Jovial">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
@@ -18,6 +20,14 @@
             <img src="images/profile.jpg" alt="Hello, my name is Paul Jovial" width="200">
             <p>Hello! My name is Paul Jovial, I am from Nigeria and I enjoy learning with BYUpathway  </p>
         </main>
+        <aside>
+            <h2>Enugu</h2>
+            <img src="images/enugu.webp" alt=" Enugu map">
+            <p>Enugu State, also known as the Coal City State, is located in southeastern Nigeria and 
+                is known for its historical significance as a coal mining center. 
+                The state's capital and namesake is the city of Enugu.</p>
+
+        </aside>
         <footer>
             <p>©2025 $ Paul Jovial $ Nigeria</p>
         </footer>
