did some editing

--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
             <nav>
                 <a href="#">Home</a>
                 <a href="wwr/">Rafting Website</a>
+                <a href=" https://linkedin.com">linkedin</a>
+                <a href="https://facebook.com">facebook</a>
             </nav> 
         </header>
         <main>
             <h1>Paul Jovial | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Paul Jovial" width="200">
             <p>Hello! My name is Paul Jovial, I am from Nigeria and I enjoy learning with BYUpathway  </p>
+            <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/barcelona-spain-temple?lang=eng" target="_blank">Bacelona Spain Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng" target="_blank">Aba Nigeria Temple</a></li>
+            </ul>
         </main>
-        <aside>
+        <aside class="box">
+        
             <h2>Enugu</h2>
             <img src="images/enugu.webp" alt=" Enugu map">
             <p>Enugu State, also known as the Coal City State, is located in southeastern Nigeria and 
@@ -32,4 +40,5 @@
             <p>©2025 $ Paul Jovial $ Nigeria</p>
         </footer>
     </body>
+    <!--5/24/2025-->
 </html>
