--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,13 +45,13 @@
         <p>&copy;2025 | White Water Rafting Company | Paul Jovial</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="images/facebook.webp" alt="Facebook" width="2px">
+                <img src="images/facebook.webp" alt="Facebook">
             </a>
             <a href="https://twitter.com">
-                <img src="images/twitter.webp" alt="Twitter" width="2px">
+                <img src="images/twitter.webp" alt="Twitter">
             </a>
             <a href="https://instagram.com">
-                <img src="images/instagram.webp" alt="Instagram" width="2px">
+                <img src="images/instagram.webp" alt="Instagram">
             </a>
         </nav>
 
