i added some edit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <main>
             <h1>Paul Jovial | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Paul Jovial" width="200">
-            <p>Hello! My name is Paul Jovial, I am from Nigeria and I enjoy learning with BYUpathway  </p>
+            <p>Hello! My name is Paul Jovial, I am from Nigeria and I am currently a student with BYU-Pathway Worldwide. Being part of this inspired program has been a life-changing experience for me. It has not only helped me grow academically, but it has also strengthened my spiritual foundation and my confidence in achieving my goals. 
+                Before joining BYU-Pathway, I faced many challenges in pursuing higher education, especially in balancing my time, finances, and responsibilities. But through this program, I’ve found a way to learn flexibly, affordably, and with support from uplifting instructors and peers from around the world. I feel like I am part of a global family, united in faith and a desire to learn and grow.
+                What I enjoy most about studying with BYU-Pathway is the spiritual element that is included in every course. We begin each week with devotionals and we often apply gospel principles to our academic learning. This has helped me see education not just as a tool for career success, but as a way to become more like the Savior and to serve others.
+                The weekly gatherings and PathwayConnect courses have improved my English and communication skills, and I have become more disciplined and organized. I’ve also learned how to set goals and stay motivated even when things are hard.
+                I am very grateful for the opportunity to be a part of BYU-Pathway, and I look forward to continuing my journey toward earning a degree and becoming a better person in all aspects of my life.
+            </p>
             <ul class="box">
             <li><a href="https://www.churchofjesuschrist.org/temples/details/barcelona-spain-temple?lang=eng" target="_blank">Bacelona Spain Temple</a></li>
             <li><a href="https://www.churchofjesuschrist.org/temples/details/paris-france-temple" target="_blank">Paris France Temple</a></li>
