made some changes to the page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -23,24 +23,42 @@
         <div class="hero">
             <img src="images/hero-image.jpg" alt="hero-image">
             <h1>White Water Rafting Company</h1>
-            <article>
-            <img src="images/happy-client.jpg" alt="happy-client">
-            <p>Lorem ipsum dolor sit amet consectetur ...</p>
-            </article>
         </div>
-        <section>
+        <br>
+        <section id="history">
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing ...</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur, natus. Officia itaque reprehenderit nihil adipisci a aperiam vero, architecto obcaecati sapiente quasi molestiae laudantium distinctio illum dolores quibusdam temporibus rem.</p>
+            <article>
+                <img src="images/happy-client.jpg" alt="happy-client">
+            </article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat odio saepe harum sapiente doloribus ipsum, rem cumque labore ex explicabo culpa perferendis aliquam unde laudantium! Dolor beatae accusantium adipisci esse?</p>
         </section>
+        <br>
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="images/wwr-rep1.jpg" alt="White Water Rafting">
-            <img src="images/wwr-rep2.jpg" alt="White Water Rafting">
-            <img src="images/wwr-rep3.jpg" alt="White Water Rafting">
-            <img src="images/wwr-rep4.jpg" alt="White Water Rafting">
-            <img src="images/wwr-rep5.jpg" alt="White Water Rafting">
+            <figure>
+                <img src="images/wwr-rep1.jpg" alt="Quick Spring">
+                <figcaption>Quick Spring</figcaption>
+            </figure>
+            <figure>
+                <img src="images/wwr-rep2.jpg" alt="Cliff Edge">
+                <figcaption>Cliff Edge</figcaption>
+            </figure>
+            <figure>
+                <img src="images/wwr-rep3.jpg" alt="Serene Scene">
+                <figcaption>Serene Scene</figcaption>
+            </figure>
+            <figure>
+                <img src="images/wwr-rep4.jpg" alt="Big Blue">
+                <figcaption>Big Blue</figcaption>
+            </figure>
+            <figure>
+                <img src="images/wwr-rep5.jpg" alt="Fast Break">
+                <figcaption>Fast Break</figcaption>
+            </figure>
         </section>
     </main>
+    <br> 
     <footer>
         <p>&copy;2025 | White Water Rafting Company | Paul Jovial</p>
         <nav class="socialmedia">
