--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -54,7 +54,7 @@
                 <textarea name="message" id="message"></textarea>
                 <label for="newsletter">Please subscribe me to the monthly newsletter</label>
                 <input type="checkbox" id="newsletter" name="newsletter">
-                <button type="submit">Submit</button>
+                <button type="submit">SEND</button>
             </form>
             <div id="company-information">
                 <h2>Company Information</h2>
