created the final pages for the site

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -80,7 +80,9 @@
     <footer>
         <p>&copy;2025 | White Water Rafting Company | Paul Jovial</p>
         <nav title="contact us wireframe">
-            <a href="https://wireframe.cc/pro/pp/79073a7b7946638" target="_blank">Contact us wireframe</a>
+            <a href="https://wireframe.cc/pro/pp/a2c6e5379948287" target="_blank">Trips wireframe</a>
+            <!-- I couldnt save this wireframe in the images folder because i dont have a premium account on 
+            wireframe.cc, so i had to use this link instead  -->
         </nav>
         <nav class="socialmedia">
             <a href="https://facebook.com">
