--- a/wwr/index.html
+++ b/wwr/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="White water Rafting company's Contact us page.">
-    <title>White Water Rafting Contact us Page</title>
+    <meta name="viewport" content="White water Rafting company's Home page.">
+    <title>White Water Rafting </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aladin&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
